--- a/app/views/geinins/_geinin_new.html.erb
+++ b/app/views/geinins/_geinin_new.html.erb
@@ -1,5 +1,5 @@
 <div class="event-box">
-  <%= form_for(@geinin) do |f| %>
+  <%= form_for(@geinin, method: :post) do |f| %>
   <div class="form-item">
     <div class="form-icon">
       <i class="fas fa-user"></i>
