--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -201,11 +201,12 @@ header{
     margin-right: 5px
 }
 .main{
-    margin:0px 50px;
+    margin:60px 50px 10px 50px;
     padding: 0px 80px;
     display:block;
     overflow: hidden;
     position: relative;
+    min-height:800px;
 }
 
 @media(min-width:972px){
@@ -293,12 +294,13 @@ header{
 }
 .post-performer a{
   text-decoration:none;
-  float:left;
+  display:inline-block;
   color:#595959;
-  height: 20px;
-  line-height: 20px;
-  padding: 0 10px;
-  margin-right:5px;
+  height: 15px;
+  line-height: 15px;
+  padding: 3px 10px;
+  margin-right:2px;
+  margin-bottom:5px;
   background-color: #fff;
   border: 1px solid #aaa;
   border-radius: 3px;
@@ -370,16 +372,16 @@ header{
 /* 検索フォーム　*/
 .search-form-container{
     margin-top: 12px;
-    background-color: #272727;
+    /* background-color: #272727; */
     color: #f7f7f7;
-    width:350px;
     z-index: 2;
-    box-shadow: 0 0 1px 1px rgba(0,0,0,.05);
+    /* box-shadow: 0 0 1px 1px rgba(0,0,0,.05); */
     display: block;
     padding: 0;
     border: 0;
     font: inherit;
     /* vertical-align: baseline; */
+    margin:0 auto;
 }
 .search-form-inner{
     padding: 12px 2px 10px 5px;
@@ -387,10 +389,12 @@ header{
     font: inherit;
     vertical-align: baseline;
     overflow: hidden;
+    margin:0 auto;
+    width:350px;
+    background-color: #272727;
 }
 .search-categories{
     padding:2px 2px 10px 2px;
-    margin-bottom:5px;
     clear:both; 
 }
 .search-label{
@@ -435,12 +439,11 @@ header{
 .search-performer-box{
     position:left;
     padding-top:5px;
+    padding-left:10px;
 }
 .search-form-area{
     position:left;
-    float:left;
     padding-left:10px;
-    margin-bottom:10px;
 }
 .categories{
     display: block;
@@ -508,9 +511,14 @@ footer{
 } */
 .new{
     padding:10px 40px;
-    margin:0 auto;    
     width:200px;
+    margin:0 auto;
+    margin-top:20px;
+    margin-bottom:20px;
     display:block;
+}
+.new-button{
+    margin:10px;
 }
 .navigation-link{
     display: inline-block;
@@ -647,8 +655,8 @@ footer{
     border:solid 1px #f22e58;
 }
 .form-short{
-    width:130px;
-    float:left;
+    width:127px;
+    display:inline-block;
 }
 .block{
     display:block;
@@ -661,7 +669,8 @@ textarea{
 .event-box{
     width:375px;
     margin:0 auto;
-    text-align:center;
+    margin-top:20px;
+    margin-bottom:20px;
 }
 .form-item{
     clear:both;
@@ -715,6 +724,9 @@ textarea{
 .survey-result{
     padding: .25em 0 .5em .80em;
 }
+.ranking{
+    position:left;
+}
 .pink{
     background-color:#f22e58;
     color: #fbfbfb;
@@ -745,7 +757,6 @@ textarea{
     box-shadow: 0 2px 3px 0 rgba(0,0,0,.1);
     cursor: pointer;
     transition: all .2s ease 0s;
-    display: inline-block;
     text-decoration: none;
 }
 /* 芸人wiki */
@@ -810,4 +821,98 @@ textarea{
 }
 .facebook{
     color:#3B5998;
+}
+.lp-panel {
+    position: relative;
+    width:100%;
+    margin:0 auto;
+    margin:10px 0;
+    background-color:white;
+}
+.lp-panel-item{
+    padding:10px;
+}
+.lp-panel-item-body {
+    width: 100%;
+    margin-top: 5px;
+}
+.lp-panel-item-title {
+    color: #f22e58;
+    font-weight: normal;
+    font-size: 20px;
+    margin: 0;
+}
+.lp-panel-item-text {
+    margin: 8px 0;
+    font-size: .875rem;
+}
+.lp-panel-item-image {
+    width: 100%;
+    height: 160px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    border: 1px solid #eee;
+    border-radius: 10px;
+}
+/* タブ表示　*/
+/* タブの外枠 */
+.tabs {
+  margin: 0;
+}
+input{
+    margin:0;
+}
+/* タブのスタイル */
+.tabs .tab-label {
+  display: inline-block;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  background-color: #f22e58;
+  color:#f7f7f7;
+  padding: 10px 5px;
+  font-size: 13px;
+  text-align:center;
+  margin:0;
+}
+.tab-label{
+    width:21%;
+}
+ 
+/* タブにマウスカーソルがのったときフッター */
+.tabs .tab-label:hover {
+  opacity: 0.7;
+  background-color:#f22e58;
+  color: #f7f7f7;
+  border:1px solid #f7f7f7;
+}
+ 
+/* ラジオボタンと内容を非表示 */
+.tabs input[name="tab-radio"],
+.tabs .tab-content {
+  display: none;
+  margin:0;
+}
+ 
+/* タブ内容のスタイル */
+.tabs .tab-content{
+  padding: 10px;
+  min-height: 200px;
+  background-color:#fff;
+}
+ 
+/* 選択されているタブのコンテンツのみを表示 */
+.tabs #tab-1:checked ~ .tab-1-content,
+.tabs #tab-2:checked ~ .tab-2-content,
+.tabs #tab-3:checked ~ .tab-3-content,
+.tabs #tab-4:checked ~ .tab-4-content,
+.tabs #tab-5:checked ~ .tab-5-content {
+  display: block;
+}
+ 
+/* 選択されているタブのスタイルを変える */
+.tabs input[name="tab-radio"]:checked + .tab-label {
+  background-color: #f7f7f7;
+  color:#f22e58;
+  border:1px solid #f22e58;
 }
