--- a/app/views/geinins/_search_form.html.erb
+++ b/app/views/geinins/_search_form.html.erb
@@ -22,6 +22,12 @@
           <% end %>      
         </div>
       </div>
+      <div>
+        <%= link_to survey_path do %>
+          <i class="fas fa-file-alt"></i>
+          <span class="user-menu-button-text">アンケート結果</span>
+        <% end %>
+      </div>
     </div>
       </div>
     </div>
