--- a/app/views/geinins/new.html.erb
+++ b/app/views/geinins/new.html.erb
@@ -1,14 +1,6 @@
-<br><br><br><br><br>
-<article class="">
-    <div class="">
-        <div class="">
-            <span class=""></span>
-        </div>
-    </div>
-    <div class="post-wrapper">
-        <h1 class="post-title">芸人登録</h1>
-        <div class="post-box">
-        <%= render :partial => "geinin_edit", locals: { geinin: @geinin } %>
-        </div>
-    </div>
-</article>
+<section class="main">
+  <div class="page-info hard-shadows">
+    <p>芸人登録</p>
+  </div>
+  <%= render :partial => "geinin_new", locals: { geinin: @geinin } %>
+</section>
