--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -2,5 +2,11 @@
   <div class="page-info hard-shadows">
         <span>ライブ登録</span>
   </div>
-  <%= render :partial => "event_edit", locals: { event: @event } %>
+  <div class="container">
+    <div class="event-box">
+      <%= form_for(@event, method: :post) do |f| %>
+        <%= render :partial => "event_edit", locals: { event: @event, f: f, event_performers: "" } %>
+      <% end %>
+    </div>
+  </div>
 </section>
