--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,6 +34,9 @@ header{
 .inner{
   margin:0;
   padding:0 10px;
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .user-menu{
   margin:0 auto;
@@ -201,11 +204,14 @@ header{
     margin-right: 5px
 }
 .main{
-    margin:60px 50px 10px 50px;
     padding: 0px 80px;
     display:block;
     overflow: hidden;
     position: relative;
+    margin:0 auto;
+    margin-top:60px;
+    margin-bottom:20px;
+    max-width:600px;
     min-height:800px;
 }
 
@@ -390,8 +396,7 @@ header{
     vertical-align: baseline;
     overflow: hidden;
     margin:0 auto;
-    width:350px;
-    background-color: #272727;
+    background-color: #3c3c3c;
 }
 .search-categories{
     padding:2px 2px 10px 2px;
@@ -446,8 +451,8 @@ header{
     padding-left:10px;
 }
 .categories{
-    display: block;
-    padding: 6px 12px;
+    display: inline-block;
+    padding: 4px 12px;
     color: #f7f7f7;
     background-color: #333;
     margin: 0 6px 6px 0;
@@ -540,6 +545,7 @@ footer{
 .event-no-result{
     padding:60px 40px;
     text-align:center;
+    background-color:#fff;
 }
 
 @media(min-width:800px){
@@ -855,6 +861,13 @@ textarea{
     border: 1px solid #eee;
     border-radius: 10px;
 }
+.lp-panel-item-site-title{
+    color: #f22e58;
+    font-weight: normal;
+    font-size: 30px;
+    margin: 0;
+    text-align:center;
+}
 /* タブ表示　*/
 /* タブの外枠 */
 .tabs {
@@ -915,4 +928,51 @@ input{
   background-color: #f7f7f7;
   color:#f22e58;
   border:1px solid #f22e58;
+}
+}
+.twitter-button-large{
+    font-size: 20px;
+    width: 300px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    vertical-align: middle;
+    display: inline-block;
+    transition-duration: 0.5s;
+    margin: 0px auto;
+    position: relative;
+    border: none;
+    padding: 0 10px;
+    background-repeat: no-repeat;
+    background-position: 10px 10px;
+    display: block;
+    margin: 40px auto;
+    position: relative;
+    color: white;
+    background-color: #1B95E0;
+    border: 1px solid #1B95E0;
+    -webkit-border-radius: 10px;
+    text-decoration: none;
+}
+
+.twitter-large-button a:hover {
+    color: #1B95E0;
+    background-color: white;
+    opacity: 1.0;
+}
+
+.twitter-large-button a {
+    color:#FFFFFF;
+}
+@media(max-width:320px){
+    .categories{
+    display: inline-block;
+    padding: 4px 6px;
+    color: #f7f7f7;
+    background-color: #f22e58;
+    margin: 0 3px 3px 0;
+    transition: all 300ms ease;
+    float: left;
+    margin-top:5px;
+    }
 }
