--- a/app/views/events/_event_edit.html.erb
+++ b/app/views/events/_event_edit.html.erb
@@ -1,6 +1,3 @@
-<div class="container">
-  <div class="event-box">
-    <%= form_for(@event, method: :post) do |f| %>
     <div class="form-item">
       <div class="form-icon">
         <i class="fas fa-calendar-alt"></i>
@@ -40,11 +37,10 @@
         <i class="fas fa-users"></i>
       </div>
       <div class="form">
-        <%= f.fields_for :event_performers do |performers_form| %>
-          <%= performers_form.text_area :performer,:placeholder => "出演者（改行でタグになります）",:class => "event-edit-form textarea form-long"  %><br>
-        <% end %>
+        <textarea placeholder="出演者（改行でタグになります）" class="event-edit-form textarea form-long" name="event[event_performers_attributes][0][performer]" id="event_event_performers_attributes_0_performer"><%= event_performers %></textarea>    
       </div>
     </div>
+    <%= f.submit '投稿する！', :class => "btn new pink" %>
     <div class="more-info">もっと詳しく
     </div>
     <div class="form-item">
@@ -96,8 +92,5 @@
         〜
         <%= f.text_field :presale_end,:placeholder => "終了日時",:class => "event-edit-form form-short" %>
       </div>
-    </div>  
-   </div>
+    </div>
     <%= f.submit '投稿する！', :class => "btn new pink create-post" %>
-    <% end %> 
-</div>
