--- a/app/views/events/_search_form.html.erb
+++ b/app/views/events/_search_form.html.erb
@@ -1,4 +1,4 @@
-<div class="search-form-container">
+<div class="search-form-container hard-shadows">
   <div class="search-form-inner">
     <div class="search-categories">
       <div class="search-label">
@@ -6,10 +6,10 @@
         <p class="label-border"></p>
       </div>
       <div class="search-button-box">
-        <span><%= link_to '今日', search_path(:date => 'today'), :class => "btn categories pink float-left" %></span>
-        <span><%= link_to '明日', search_path(:date => 'tomorrow'), :class => "btn categories pink float-left"  %></span>
-        <span><%= link_to '次の土曜', search_path(:date => 'next_sat'), :class => "btn categories pink float-left"  %></span>
-        <span><%= link_to '次の日曜', search_path(:date => 'next_sun'), :class => "btn categories pink float-left"  %></span>
+        <span><%= link_to '今日', search_path(:date => 'today'), :class => "btn categories pink" %></span>
+        <span><%= link_to '明日', search_path(:date => 'tomorrow'), :class => "btn categories pink"  %></span>
+        <span><%= link_to '次の土曜', search_path(:date => 'next_sat'), :class => "btn categories pink"  %></span>
+        <span><%= link_to '次の日曜', search_path(:date => 'next_sun'), :class => "btn categories pink"  %></span>
       </div>
       <div class="search-form-area">
         <%= form_tag(search_path, method: "get") do %>
