--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,34 +1,33 @@
-<section class="slice slice-lg sct-color-1">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4 col-md-offset-4">
-            <%= form_for(@user) do |f| %>
-                <div class="form-user style-1 rounded has-shadow-1">
-                    <div class="form-header text-center">
-                        <h2 class="form-header-title">プロフィール編集</h2>
-                    </div>
-                    <div class="form-body">
-                      <form class="mt-20">
-                        <div class="form-group has-icon">
-                          <label class="control-label sr-only" for="inputName"><%= f.text_field :name %></label>
-                          <input type="text" class="form-control" id="inputName" placeholder="名前">
-                          <span class="fa fa-user form-control-icon" aria-hidden="true"></span>
-                        </div>
-                        <div class="form-group has-icon">
-                          <div class="user-edit-image">
-                              <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "https://pbs.twimg.com/profile_images/958803950391541760/ABdXMZLE.jpg" %>
-                          </div>
-                            <label class="control-label sr-only" for="inputEmail">ProfileImage</label>
-                            <input type="file">
-                        </div>
-                        <% if @user.id == current_user.id %>
-                            <p><%= link_to "退会する", user_path(@user), class: "pull-right", method: :delete,"data-confirm" => "本当に退会しますか？" %></p>
-                        <% end %>
-                        <button type="submit" class="btn btn-lg btn-block btn-base-1 mt-20"><%= f.submit '変更を保存' %></button>
-            <% end %>
-                    </div>
-                </div>
-            </div>
+<section class="main">
+  <div class="page-info hard-shadows">
+    <p>プロフィール編集</p>
+  </div>
+    <div class="event-box">
+    <%= form_for(@user) do |f| %>
+    <div class="form-item">
+        <div class="form-icon">
+        <i class="fas fa-user"></i>
+        </div>
+        <div class="form">
+        <%= f.text_field :name,:placeholder => "名前 *",:class => "event-edit-form form-long",:required=>"true" %>
+        </div>    
+    </div>
+    <div class="form-item">
+        <div class="form-icon">
+        <i class="fas fa-file-alt"></i>
+        </div>
+        <div class="form">
+        <%= f.text_area :description,:placeholder => "説明",:class => "event-edit-form form-long",:required=>"true" %>
+        </div>    
+    </div>
+    <div class="form-item">
+        <div class="form-icon">
+        <i class="fas fa-link"></i>
+        </div>
+        <div class="form">
+        <%= f.text_field :url,:placeholder => "URL",:class => "event-edit-form form-long" %><br>
         </div>
     </div>
+    <%= f.submit '登録する！', :class => "btn new pink create-post" %>
+    <% end %> 
 </section>
