--- a/app/views/events/_event_info.html.erb
+++ b/app/views/events/_event_info.html.erb
@@ -55,10 +55,10 @@
           <span class="post-option-text">編集する</span>
         <% end %>
       </div>
-      
-      <%= render :partial => "participates/participate", locals: { event: event } %>
-      
-      <div class="post-option">
+      <div class="post-option" id="participate-button-<%= event.id %>">
+        <%= render :partial => "participates/participate", locals: { event: event } %>
+      </div>
+      <div class="post-option" id="pending-button-<%= event.id %>">
         <%= render :partial => "pendings/pending", locals: { event: event } %>
       </div>
       <div class="post-option">
