--- a/app/views/events/_search_form.html.erb
+++ b/app/views/events/_search_form.html.erb
@@ -2,7 +2,7 @@
   <div class="search-form-inner">
     <div class="search-categories">
       <div class="search-label">
-        <span><h2>日付で探す</h2></span>
+        <span><h2><span class="fas fa-search icon"></span>日付で探す</h2></span>
         <p class="label-border"></p>
       </div>
       <div class="search-button-box">
@@ -19,7 +19,7 @@
     </div>
     <div class="search-categories">
       <div class="search-label">
-        <h2 class="search-label-name">キーワードで探す</h2>
+        <h2 class="search-label-name"><span class="fas fa-search icon"></span>キーワードで探す</h2>
         <p class="label-border"></p>
       </div>
       <div class="search-form-area">
@@ -28,24 +28,27 @@
         <% end %>
       </div>
       <div class="search-performer-box post-performer">
-        <i class="fas fa-chart-line" style="padding-bottom:10px;"> 人気検索ワード</i>
-        <ul>
-          <li><%= link_to 'きつね', search_path(:performer => 'きつね'), :class => "post-performer float-left" %></li>
-          <li><%= link_to 'まんじゅう大帝国', search_path(:performer => 'まんじゅう大帝国'), :class => "post-performer float-left"  %></li>
-          <li><%= link_to '卯月', search_path(:performer => '卯月'), :class => "post-performer float-left"  %></li>
-          <li><%= link_to 'ランジャタイ', search_path(:performer => 'ランジャタイ'), :class => "post-performer float-left"  %></li>
-          <li><%= link_to 'トンツカタン', search_path(:performer => 'トンツカタン'), :class => "post-performer float-left" %></li>
-          <li><%= link_to '金属バット', search_path(:performer => '金属バット'), :class => "post-performer float-left"  %></li>
-          <li><%= link_to 'Aマッソ', search_path(:performer => 'Aマッソ'), :class => "post-performer float-left"  %></li>
-          <li><%= link_to '三四郎', search_path(:performer => '三四郎'), :class => "post-performer float-left"  %></li>
-          <li><%= link_to 'ゾフィー', search_path(:performer => 'ゾフィー'), :class => "post-performer float-left"  %></li>
-          <li><%= link_to 'うしろシティ', search_path(:performer => 'うしろシティ'), :class => "post-performer float-left"  %></li>                     
-        </ul>       
+        <span class="fas fa-chart-line icon"></span><label for="label1">人気検索ワード</label>
+        <input type="checkbox" id="label1" class="cssacc" />
+        <div class="accshow">
+          <ul>
+            <li><%= link_to 'きつね', search_path(:performer => 'きつね'), :class => "post-performer float-left" %></li>
+            <li><%= link_to 'まんじゅう大帝国', search_path(:performer => 'まんじゅう大帝国'), :class => "post-performer float-left"  %></li>
+            <li><%= link_to '卯月', search_path(:performer => '卯月'), :class => "post-performer float-left"  %></li>
+            <li><%= link_to 'ランジャタイ', search_path(:performer => 'ランジャタイ'), :class => "post-performer float-left"  %></li>
+            <li><%= link_to 'トンツカタン', search_path(:performer => 'トンツカタン'), :class => "post-performer float-left" %></li>
+            <li><%= link_to '金属バット', search_path(:performer => '金属バット'), :class => "post-performer float-left"  %></li>
+            <li><%= link_to 'Aマッソ', search_path(:performer => 'Aマッソ'), :class => "post-performer float-left"  %></li>
+            <li><%= link_to '三四郎', search_path(:performer => '三四郎'), :class => "post-performer float-left"  %></li>
+            <li><%= link_to 'ゾフィー', search_path(:performer => 'ゾフィー'), :class => "post-performer float-left"  %></li>
+            <li><%= link_to 'うしろシティ', search_path(:performer => 'うしろシティ'), :class => "post-performer float-left"  %></li>                     
+          </ul>
+        </div>      
       </div>
     </div>
     <div class="search-categories">
       <div class="search-label">
-        <h2 class="search-label-name">カテゴリで探す</h2>
+        <h2 class="search-label-name"><span class="fas fa-search icon"></span>カテゴリで探す</h2>
         <p class="label-border"></p>
       </div>  
       <div class="search-button-box">
