--- a/app/views/followings/_following.html.erb
+++ b/app/views/followings/_following.html.erb
@@ -1,16 +1,13 @@
 <% if user_signed_in? %>
 	<% if geinin.followed_by?(current_user) %>
-	  <li>
-	    <%= link_to geinin_followings_path(geinin), method: :delete, class: "btn following pink",id: "following-button-#{geinin.id}", remote: true, :protocol => 'https' do %>
-				<span>フォロー解除</span>
+	    <%= link_to geinin_followings_path(geinin), method: :delete, class: "btn pink following", remote: true, :protocol => 'https' do %>
+				<span class="shown">フォロー中</span>
+				<span class="hover-shown">フォロー解除</span>
 	    <% end %>
-	  </li>
 	<% else %>
-	  <li>
-	    <%= link_to geinin_followings_path(geinin), method: :post, class: "btn following pink-blank", id: "following-button-#{geinin.id}", remote: true, :protocol => 'https' do %>
+	    <%= link_to geinin_followings_path(geinin), method: :post, class: "btn pink-blank following", remote: true, :protocol => 'https' do %>
 				<span>フォローする</span>
 	    <% end %>
-	  </li>
 	<% end %>
 <% else %>
 	<!--ログインしていない場合、「ログインするとフォロー機能が使えます」のメッセージを出す-->
