--- a/app/views/participates/_participate.html.erb
+++ b/app/views/participates/_participate.html.erb
@@ -1,32 +1,22 @@
 <% if user_signed_in? %>
-	<% if event.participated_by?(current_user) %>
-	<div class="post-option">
-		<%= link_to event_participates_path(event), method: :delete, id: "participate-button-#{event.id}", remote: true, :protocol => 'https' do %>
-			<span>
-				<i class="fa fa-heart" aria-hidden="true"></i>
-				<%= event.participates.where(event_id: event.id).count %>
-			</span>
-			<span class="post-option-text">参加する</span>
-		<% end %>
-	</div>
-	<% else %>
-	<div class="post-option">
-		<%= link_to event_participates_path(event), method: :post, id: "participate-button-#{event.id}", remote: true, :protocol => 'https' do %>
-			<span>
-				<i class="fa fa-heart-o" aria-hidden="true"></i>
-				<%= event.participates.where(event_id: event.id).count %>
-			</span>
-			<span class="post-option-text">参加する</span>
-		<% end %>
-	</div>
+  <% if event.participated_by?(current_user) %>
+    <%= link_to event_participates_path(event), method: :delete, remote: true, :protocol => 'https' do %>
+        <span class="fa fa-heart accent" aria-hidden="true"></span>
+        <%= event.participates.where(event_id: event.id).count %>
+        <span class="post-option-text">参加する</span>
+    <% end %>
+  <% else %>
+    <%= link_to event_participates_path(event), method: :post, remote: true, :protocol => 'https' do %>
+        <span class="fa fa-heart-o" aria-hidden="true"></span>
+        <%= event.participates.where(event_id: event.id).count %>
+      <span class="post-option-text">参加する</span>
+    <% end %>
 	<% end %>
 <% else %>
-	<div class="post-option">
 		<!--ログインしていない場合、「ログインするといいね機能が使えます」のメッセージを出す-->
 		<a id="modal-open" class="button-link">
 			<i class="fa fa-heart-o" aria-hidden="true"></i>
 			<%= event.participates.where(event_id: event.id).count %>
 			<span class="post-option-text">参加する</span>
 		</a>
-	</div>
 <% end %>
