--- a/app/views/pendings/_pending.html.erb
+++ b/app/views/pendings/_pending.html.erb
@@ -1,25 +1,22 @@
 <% if user_signed_in? %>
-	<% if event.pending_by?(current_user) %>
-	  <li>
-	    <%= link_to event_pendings_path(event), method: :delete, id: "pending-button-#{event.id}", remote: true, :protocol => 'https' do %>
-	      <i class="fas fa-question-circle" aria-hidden="true" style="color: red;"></i>
-	      <%= event.pendings.where(event_id: event.id).count %> 
-				<span class="post-option-text">検討中</span>
-	    <% end %>
-	  </li>
-	<% else %>
-	  <li>
-	    <%= link_to event_pendings_path(event), method: :post, id: "pending-button-#{event.id}", remote: true, :protocol => 'https' do %>
-	      <i class="far fa-question-circle" aria-hidden="true"></i>
-	      <%= event.pendings.where(event_id: event.id).count %>
-				<span class="post-option-text">検討中</span>
-	    <% end %>
-	  </li>
+  <% if event.pending_by?(current_user) %>
+    <%= link_to event_pendings_path(event), method: :delete, remote: true, :protocol => 'https' do %>
+        <span class="fa fa-heart accent" aria-hidden="true"></span>
+        <%= event.pendings.where(event_id: event.id).count %>
+        <span class="post-option-text">気になる</span>
+    <% end %>
+  <% else %>
+    <%= link_to event_pendings_path(event), method: :post, remote: true, :protocol => 'https' do %>
+        <span class="fa fa-heart-o" aria-hidden="true"></span>
+        <%= event.pendings.where(event_id: event.id).count %>
+      <span class="post-option-text">気になる</span>
+    <% end %>
 	<% end %>
 <% else %>
-<!--ログインしていない場合、「ログインするといいね機能が使えます」のメッセージを出す-->
-	<!--ログインしていない場合、「ログインするといいね機能が使えます」のメッセージを出す-->
-	<a id="modal-open" class="button-link">
-		<i class="far fa-question-circle" aria-hidden="true"></i> 検討中
-	</a>
+		<!--ログインしていない場合、「ログインするといいね機能が使えます」のメッセージを出す-->
+		<a id="modal-open" class="button-link">
+			<i class="fa fa-heart-o" aria-hidden="true"></i>
+			<%= event.pendings.where(event_id: event.id).count %>
+			<span class="post-option-text">気になる</span>
+		</a>
 <% end %>
