--- a/app/views/events/schedule.html.erb
+++ b/app/views/events/schedule.html.erb
@@ -3,7 +3,7 @@
 <% @events_followings = @results[2].uniq %>
 <% @events_posted = @results[3] %>
 <% if @event_participates.present? && @event_pendings.present? %>
-  <% @events = @event_participates + @event_pengings %>
+  <% @events = @event_participates + @event_pendings %>
   <% @events = @events.uniq %>
 <% end %>
 
@@ -11,30 +11,38 @@
   <div class="element page-info hard-shadows">
     <p>スケジュール</p>
   </div>
-  <div class="tabs">  
-    <input id="tab-1" type="radio" name="tab-radio">
-    <label class="tab-label" for="tab-1">フォロー中</label>
+  <div class="tabs">    
+    <input id="following-tab" type="radio" name="tab_item" checked>
+    <label class="tab_item" for="following-tab">フォロー中</label>
 
-    <input id="tab-2" type="radio" name="tab-radio" checked>
-    <label class="tab-label" for="tab-2">参加する</label>
+    <input id="participates-tab" type="radio" name="tab_item">
+    <label class="tab_item" for="participates-tab">参加する</label>
   
-    <input id="tab-3" type="radio" name="tab-radio">
-    <label class="tab-label" for="tab-3">検討中</label>
+    <input id="pendings-tab" type="radio" name="tab_item">
+    <label class="tab_item" for="pendings-tab">気になる</label>
 
-    <input id="tab-4" type="radio" name="tab-radio">
-    <label class="tab-label" for="tab-4">自分の投稿</label>
+    <input id="my-posts-tab" type="radio" name="tab_item">
+    <label class="tab_item" for="my-posts-tab">自分の投稿</label>
 
-    <div class="tab-content tab-1-content hard-shadows">
+    <div class="hard-shadows tab-content tab-1-content" id="following_content">
+      <div class="tab_content_description">
         <%= render :partial => "events/event_list", locals: { events: @events_followings } %>
+      </div>
     </div>
-    <div class="tab-content tab-2-content hard-shadows">
-      <%= render :partial => "events/event_list", locals: { events: @events_participates } %>
+    <div class="hard-shadows tab-content tab-2-content" id="participates_content">
+      <div class="tab_content_description">
+        <%= render :partial => "events/event_list", locals: { events: @events_participates } %>
+      </div>
     </div>
-    <div class="tab-content tab-3-content hard-shadows">
-      <%= render :partial => "events/event_list", locals: { events: @events_pendings } %>
+    <div class="hard-shadows tab-content tab-3-content" id="pendings_content">
+      <div class="tab_content_description">
+        <%= render :partial => "events/event_list", locals: { events: @events_pendings } %>
+      </div>
     </div>
-    <div class="tab-content tab-4-content hard-shadows">
-      <%= render :partial => "events/event_list", locals: { events: @events_posted } %>
+    <div class="hard-shadows tab-content tab-4-content" id="my_posts_content">
+      <div class="tab_content_description">
+        <%= render :partial => "events/event_list", locals: { events: @events_posted } %>
+      </div>  
     </div>
   </div>
 </section>
