--- a/app/views/events/_event_list.html.erb
+++ b/app/views/events/_event_list.html.erb
@@ -4,15 +4,13 @@
 	      <%= render 'events/event_info', event: event, user: @user %>
 	   <% end %>
 	<% else %>
-	<div class="event-no-result hard-shadow">
-		<p>イベントの登録はまだありません。</p>
-		<p>情報がまだありませんか？</p>
-		<p>wArally!のライブ情報は誰でも登録することができます！</p>
+		<p class="c-txtsp">イベントの登録はまだありません。</p>
+		<p class="c-txtsp">情報がまだありませんか？</p>
+		<p class="c-txtsp">wArally!のライブ情報は誰でも登録することができます！</p>
 		<div class="new-button">
 			<%= link_to new_event_path,:class=>"btn new pink" do %>
 				<i class="fa fa-plus-circle"></i>
 				<span>今すぐライブを登録する</span>
 			<% end %>
 		</div>
-	</div>
 	<% end %>
