--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,25 +21,29 @@ a{
 body{
     background-image:url('background.png');
     font-family: 'Quicksand',sans-serif;
-}
+    color: #14171a;
+    font-size: 14px;
+    line-height: 20px;
+  }
 /* ここからCSSを記述してください */
 header{
-  background-color:#272727;
-  color:#f7f7f7;
+  background-color:#fff;
+  color:#66757f;
   font-family: 'Quicksand',sans-serif;
-  height:60px;
+  height:46px;
   position:fixed;
   top:0;
   left:0;
   z-index:10;
   width:100%;
-  line-height:60px;
+  line-height:46px;
   display:block;
   overflow:hidden; 
+  border-bottom: 1px solid #ccd6dd;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 .inner{
   margin:0;
-  padding:0 10px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -61,49 +65,44 @@ header{
 .user-menu-button a{
   display:block;
   font-size:14px;
-  line-height:60px;
-  height:60px;
+  line-height:46px;
+  height:46px;
+  color:#66757f;
   text-align:center;
-  background:#272727;
-  color:#f7f7f7;
-  border-right:1px solid #666666;
   text-decoration:none;
-}
-.user-menu-button li:first-child a{
-  border-left:1px solid #666666;
 }
 .user-menu-button a:hover{
   background-color: #f7f7f7;
-  color:#272727;
+  color:#f22e58;
+  border-bottom:3px solid #f22e58;
 }
 .user-menu-button-text{
   padding-left:2px;
 }
 .site-logo{
-    margin-left:25px;
-    padding:5px 0;
-    height:50px;
+    padding:3px 0;
     float:left;
+    vertical-align:middle;
+    margin-left:25px;
 }
 .site-title div{
   font-size:28px;
   line-height:60px;
   float:left;
 }
-.site-title a{
-    margin:0px 10px 0px 10px;
-    font-size:28px;
-    line-height:60px;
-    display:block;
-    float:left;
-}
 .site-sub-title{
   padding-left:10px;
   font-size:14px;
+  color:#272727;
 }
 .site-title a{
+  margin:0px 10px 0px 10px;
+  font-size:28px;
+  line-height:46px;
+  display:block;
+  float:left;
+  color:#272727;
   text-decoration:none;
-  color:#f7f7f7;
   display:block;
   float:left;
 }
@@ -112,6 +111,7 @@ header{
 }
 .login-button{
   padding-right:20px;
+  line-height:46px;
   float:right;
 }
 .twitter-button{
@@ -122,10 +122,9 @@ header{
     text-align: center;
     display: inline-block;
     transition-duration: 0.5s;
-    margin: 12px auto;
+    margin: 7px auto;
     position: relative;
     border: none;
-    padding: 0 10px;
     background-repeat: no-repeat;
     background-position: 10px 10px;
     display: block;
@@ -215,7 +214,7 @@ header{
     overflow: hidden;
     position: relative;
     margin:0 auto;
-    margin-top:60px;
+    margin-top:30px;
     margin-bottom:20px;
     max-width:600px;
     min-height:800px;
@@ -275,7 +274,7 @@ header{
   font-size:16px;
 }
 .post-wrapper{
-  padding:5px 20px;
+  padding:5px 10px;
 }
 .post-title{
   text-align:center;
@@ -315,8 +314,8 @@ header{
   color:#595959;
   height: 15px;
   line-height: 15px;
-  padding: 3px 10px;
-  margin-right:2px;
+  padding: 3px 5px;
+  margin-right:5px;
   margin-bottom:5px;
   background-color: #fff;
   border: 1px solid #aaa;
@@ -386,9 +385,9 @@ header{
 }
 /* 検索フォーム　*/
 .search-form-container{
-    margin-top: 12px;
     /* background-color: #272727; */
-    color: #f7f7f7;
+    /* color: #f7f7f7; */
+    color:#272727;
     z-index: 2;
     /* box-shadow: 0 0 1px 1px rgba(0,0,0,.05); */
     display: block;
@@ -397,25 +396,32 @@ header{
     font: inherit;
     /* vertical-align: baseline; */
     margin:0 auto;
+    margin-top: 12px;
+    margin-bottom:10px;
+    width:350px;
+    background:rgba(255,255,255,0.5);
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
 }
 .search-form-inner{
-    padding: 12px 2px 10px 5px;
     border: 0;
     font: inherit;
     vertical-align: baseline;
+    display:inline-block;
     overflow: hidden;
-    margin:0 auto;
-    background-color: #3c3c3c;
+    margin: 10px;
+    padding:10px 2px;
+    background-color:#fff;
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
 }
 .search-categories{
     padding:2px 2px 2px 2px;
     clear:both; 
 }
 .search-label{
-    font-family: 'Gibson', sans-serif;
-    width:330px;
-    border-bottom:solid #ffffff 2px;
-    border-color: #676767;
+    width:310px;
+    border-bottom:solid #ccd6dd 2px;
     font-size: 16px;
     border-bottom: 1px solid #CCC;
     padding-left: 8px;
@@ -428,14 +434,13 @@ header{
 .search-form{
     border:0;
     height:32px;
-    width:350px;
     display:inline-flex;
     border-style: none;
     background-color: #f2f2f2;
     vertical-align:middle;
     border:solid 1px #ccc;
     border-radius: 3px;
-    padding:2px 0px;
+    padding:2px 5px;
     margin:2px 0px;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;    -moz-box-shadow: inset 1px 4px 9px -6px rgba(0,0,0,0.5);
@@ -470,7 +475,6 @@ header{
     margin-top:5px;
 }
 .search-label{
-    width:320px;
     text-align: left;
     font-size: 12px;
     padding-left:10px;
@@ -482,47 +486,36 @@ header{
 
 /* footerのCSS */
 footer{
-    background-color: #111111;
-    color: #eee;
+    background-color: #fff;
+    border-top:1px solid #ccd6dd;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    color:#66757f;
     text-align:center;
-    display:inline-block;
     width:100%;
+    padding-top:10px;
+    margin:0;
 }
-.footer-menu{
-    color:#f7f7f7;
+.copyright span {
+    display: block;
+    font-size: 13px;
+    line-height: 13px;
+    padding-right: 20px;
+    padding-left: 20px;
+    padding-bottom:10px;
 }
 .footer-menu a{
     text-decoration:none;
+    color:#66757f;
 }
-.copyright>div>span {
-    display: block;
-    font-size: 13px;
-    line-height: 1;
-    padding: 15px 20px;
+.footer-menu a:hover{
+    color:#f22e58;
 }
 .navigation-block{
-    margin: 0 auto;
     width: 100%;
     text-align: center;
     margin:0 auto;
     display:inline-block;
 }
-/* .btn{
-    background-color:#f22e58;
-    font-size: 13px;
-    text-align: center;
-    color: #fbfbfb;
-    border: 3px solid #f22e58;
-    box-shadow: 0 2px 3px 0 rgba(0,0,0,.1);
-    cursor: pointer;
-    transition: all .2s ease 0s;
-    display: inline-block;
-    text-decoration: none;
-}
-.btn:hover{
-    background-color: #fbfbfb;
-    color: #f22e58;
-} */
 .new{
     padding:10px 40px;
     width:200px;
@@ -556,138 +549,10 @@ footer{
     text-align:center;
     background-color:#fff;
 }
+.login-s{
+  display:none;
+}
 
-@media(min-width:800px){
-    .user-menu-sm{
-        display:none;
-    }
-    .user-menu-button-sm{
-        display:none;
-    }
-}
-@media(max-width:1070px){
-    .site-logo{
-        margin-left:10px;
-        padding:5px 0;
-        height:50px;
-        float:left;
-    }
-    .site-title div{
-        font-size:24px;
-        line-height:60px;
-        float:left;
-    }
-    .site-sub-title{
-        font-size:10px;
-    }
-    .user-menu-button li{
-        font-size:15px;
-        width:100px;  
-    }
-    .login-button-s{
-      display:none;
-    }
-}
-@media(max-width:800px){
-    .user-menu-button{
-        display:none;
-    }
-    .user-menu-button li{
-        display:none;
-    }
-    .user-menu-sm{
-        display:inline-block;
-        position:fixed;
-        bottom:0;
-        left:0;
-        width:100%;
-    }
-    .user-menu-button-sm li{
-        float:left;
-        width:20%;
-    }
-    .user-menu-button-sm a{
-        display:block;
-        height:60px;
-        font-size:10px;
-        text-align:center;
-        background:#272727;
-        color:#f7f7f7;
-        border-right:1px solid #f7f7f7;
-        text-decoration:none;
-    }
-    .user-menu-button-sm li:first-child a{
-        border-left:1px solid #f7f7f7;
-    }
-    .user-menu-button-sm a:hover{
-        background-color: #f7f7f7;
-        color:#272727;
-    }
-    .user-menu-icon{
-        display:block;
-        margin:0 auto;
-        font-size:18px;
-        padding-top:12px;
-        padding-bottom:8px;
-    }
-    .user-menu-text{
-        display:inline-block;
-        margin:0 auto;
-        padding-top:10px;
-    }
-    .main{
-        margin:0 auto;
-        margin-top:45px;
-        padding:0 10px;
-    }
-    .page-info{
-        margin: 0 auto;
-        padding:20px;
-        text-align:center;
-    }
-    .search-form-container{
-        margin:0 auto;
-    }
-    .login-button{
-      display:none;
-    }
-    .login-s{
-      border-radius:50%;
-      background-color:#1da1f2;
-      color:#f7f7f7;
-      float:right;
-      z-index:12;
-      display: inline-block;
-      text-decoration: none;
-      width: 52px;
-      height: 52px;
-      line-height: 52px;
-      text-align: center;
-      overflow: hidden;
-      box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
-      transition: .4s;
-      margin:5px;  
-    }
-    .login-s:active{
-        -ms-transform: translateY(2px);
-        -webkit-transform: translateY(2px);
-        transform: translateY(2px);
-        box-shadow: 0 0 1px rgba(0, 0, 0, 0.15);
-        border-bottom: none;
-    }
-    .login-s a{
-      color:#f7f7f7;
-      text-decoration:none;
-      display:block;
-      overflow:hidden;
-    }
-    .login-s a:hover{
-      color: #1B95E0;
-      background-color: white;
-      opacity: 1.0;
-      display:block;
-    }
-}
 .event-edit-form{
     border:0;
     padding:10px;
@@ -823,7 +688,6 @@ textarea{
   background-color:#fff;
   margin:0 auto;
   overflow: hidden;
-  padding-bottom:15px;
 }
 .geinin-wrapper{
   padding:10px 10px;
@@ -836,6 +700,9 @@ textarea{
     text-decoration:none;
     color:#000;
     font-size:16px;
+    display:block;
+    float:left;
+    padding:10px 0;
 }
 .geinin-name:hover{
     color:#f22e58;
@@ -851,7 +718,7 @@ textarea{
     display:inline-block;
 }
 .geinin-image-box img{
-    width:40px;
+    width:30px;
     border-radius:50%;
 }
 .geinin-name-title{
@@ -863,7 +730,6 @@ textarea{
 .geinin-icon{
     font-size:35px;
     display: inline-block;
-    margin-top:5px;
 }
 .twitter{
     color:#1da1f2;
@@ -951,19 +817,6 @@ textarea{
 .twitter-large-button a {
     color:#FFFFFF;
 }
-/* iPhone5用 */
-@media(max-width:320px){
-    .categories{
-      display: inline-block;
-      padding: 4px 6px;
-      color: #f7f7f7;
-      background-color: #f22e58;
-      margin: 0 3px 3px 0;
-      transition: all 300ms ease;
-      float: left;
-      margin-top:5px;
-    }
-}
 .long-post{
     color: #434343;
     background-color: #fff;
@@ -991,10 +844,26 @@ textarea{
     display: list-item;
     list-style:disc;
 }
-.lp{
-  margin-top:60px;
+.message{
   width: 100%;
-  background-image:url('/assets/lp.jpg');
+  background-image:url('lp.jpeg');
+  background-size:cover;
+  height: 100vh;
+  min-height: 400px;
+  max-height: 400px;
+}
+.message-text{
+  text-align:center;
+  padding:40px 10px 0px 10px;
+  color:#fff;
+  font-size:30px;
+  font-weight:bold;
+}
+.message-text-sub{
+  text-align:center;
+  padding:5px;
+  color:#fff;
+  font-size:20px;
 }
 .btn-icon{
   margin:0;
@@ -1053,7 +922,7 @@ input[name="tab_item"] {
 }
 /*タブ切り替えの中身のスタイル*/
 .tab_content {
-  display: none;
+  display: none;ｈ
   padding: 40px 40px 0;
   clear: both;
   overflow: hidden;
@@ -1071,6 +940,187 @@ input[name="tab_item"] {
   background-color: #fff;
   border-bottom: 3px solid #f22e58;
 }
-.login-s{
-  display:none;
+.lp-panels{
+  margin-top:10px;
+}
+@media(min-width:800px){
+    .user-menu-sm{
+        display:none;
+    }
+    .user-menu-button-sm{
+        display:none;
+    }
+}
+@media(max-width:1070px){
+    .site-logo{
+        margin-left:10px;
+        padding:5px 0;
+        line-height:46px;
+        float:left;
+    }
+    .site-title div{
+        font-size:24px;
+        line-height:46px;
+        float:left;
+    }
+    .site-sub-title{
+        font-size:14px;
+    }
+    .user-menu-button li{
+        font-size:15px;
+        width:100px;  
+    }
+    .login-button-s{
+      display:none;
+    }
+}
+@media(max-width:800px){
+    .user-menu-button{
+        display:none;
+    }
+    .user-menu-button li{
+        display:none;
+    }
+    .user-menu-sm{
+        display:inline-block;
+        position:fixed;
+        bottom:0;
+        left:0;
+        width:100%;
+        border-top: 1px solid #ccd6dd;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    }
+    .user-menu-button-sm li{
+        float:left;
+        width:20%;
+    }
+    .user-menu-button-sm a{
+        display:block;
+        height:60px;
+        font-size:11px;
+        text-align:center;
+        background:#fff;
+        color: #262626;
+        text-decoration:none;
+    }
+    .user-menu-button-sm a:hover{
+        background-color: #f7f7f7;
+        color:#f22e58;
+    }
+    .user-menu-icon{
+        display:block;
+        margin:0 auto;
+        font-size:20px;
+        padding-top:10px;
+        padding-bottom:7px;
+    }
+    .user-menu-text{
+        display:inline-block;
+        margin:0 auto;
+        padding-top:10px;
+    }
+    .main{
+        margin:0 auto;
+        margin-top:30px;
+        padding:0 10px;
+    }
+    .page-info{
+        margin: 0 auto;
+        padding:20px;
+        text-align:center;
+    }
+    .search-form-container{
+        margin:0 auto;
+        margin-bottom:10px;
+    }
+    .login-button{
+      display:none;
+    }
+    .login-s{
+      border-radius:50%;
+      background-color:#f22e58;
+      color:#f7f7f7;
+      float:right;
+      z-index:12;
+      display: inline-block;
+      text-decoration: none;
+      width: 32px;
+      height: 32px;
+      line-height: 32px;
+      text-align: center;
+      overflow: hidden;
+      box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
+      transition: .4s;
+      margin:5px;
+      margin-top:8px;
+      margin-right:10px;
+    }
+    .login-s:active{
+        -ms-transform: translateY(2px);
+        -webkit-transform: translateY(2px);
+        transform: translateY(2px);
+        box-shadow: 0 0 1px rgba(0, 0, 0, 0.15);
+        border-bottom: none;
+    }
+    .login-s a{
+      color:#f7f7f7;
+      text-decoration:none;
+      display:block;
+      overflow:hidden;
+    }
+    .login-s a:hover{
+      color: #1B95E0;
+      background-color: white;
+      opacity: 1.0;
+      display:block;
+    }
+    .message-text{
+      font-size:28px;
+    }
+}
+/* iPhone5用 */
+@media(max-width:320px){
+    .categories{
+      display: inline-block;
+      padding: 4px 6px;
+      color: #f7f7f7;
+      background-color: #f22e58;
+      margin: 0 3px 3px 0;
+      transition: all 300ms ease;
+      float: left;
+      margin-top:5px;
+    }
+    .message-text{
+      font-size:25px;
+    }
+}
+.geinin-card {
+    background-color: #fff;
+    border: 1px solid #e6ecf0;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    text-align: left;
+    overflow: hidden;
+}
+.geinin-card-content {
+    margin: 13px 15px;
+    position: relative;
+    line-height:20px;
+}
+.geinin-card-header{
+  overflow: hidden;
+}
+.geinin-card-image {
+    background-color: #fff;
+    border-radius: 50%;
+    display: inline-block;
+    margin: -45px 2px 0 -3px;
+    padding: 3px;
+    position: relative;
+    vertical-align: bottom;
+    z-index: 1;
+}
+.geinin-card-options{
+  color:#657786;
+  text-align:left;
 }
