--- a/app/views/geinins/show.html.erb
+++ b/app/views/geinins/show.html.erb
@@ -6,35 +6,58 @@
     <div class="geinin-yomi">
       <p><%= @geinin.yomi %></p>
     </div>
-    <div class="geinin-icon">
-      <%= link_to "https://twitter.com/#{@geinin.twitter_id}" do %>
-        <span class="fab fa-twitter-square geinin-icon twitter"></span>
-      <% end %>
-    </div>
-    <div class="geinin-icon">
-      <%= link_to "https://twitter.com/#{@geinin.instagram_id}" do %>
-        <span class="fab fa-instagram geinin-icon instagram"></span>
-      <% end %>
-    </div>
-    <div class="geinin-icon">
-      <%= link_to @geinin.youtube_url do %>
-        <span class="fab fa-youtube geinin-icon youtube"></span>
-      <% end %>
-    </div>
-    <div class="geinin-icon">
-      <%= link_to "https://www.facebook.com/#{@geinin.facebook_url}" do %>
-        <span class="fab fa-facebook-square geinin-icon facebook"></span>
-      <% end %>
-    </div>
-    <div class="geinin-icon">
-      <%= link_to "https://twitter.com/#{@geinin.twitter_id}" do %>
-        <span class="fab fa-blogger"></span>
-      <% end %>
-    </div>
-    <div class="following-box">
+    <%= render :partial => "geinins/geinin_sns", locals: { geinin: @geinin } %>
+    <div class="following-box" id="following-button-<%= @geinin.id %>">
 			<%= render :partial => "followings/following", locals: { geinin: @geinin } %>	
 		</div>
   </div>
-  <%= render 'geinins/geinin_info', geinin: @geinin, user: @user %>
+  <article class="post hard-shadows">
+    <div class="post-wrapper">
+      <div class="post-place">
+        <span class="fas fa-map-marker-alt icon"></span><%= @geinin.agency %>
+      </div>
+      <div class="post-content">
+        <% if @geinin.start_year.present? %>
+          <p>結成年：<%= geinin.start_year %></p>
+        <% end %>
+        <% if @geinin.end_date.present? %>
+          <p>解散日：<%= @geinin.end_date %></p>
+        <% end %>
+        <% if @geinin.official_profile_url.present? %>
+          <p>公式プロフィール：<%= link_to @geinin.official_profile_url, @geinin.official_profile_url %></p>
+        <% end %>
+      </div>
+      <div class="post-tag">
+        <% @geinin.geinin_tags.each do |tag| %>
+          <%= link_to search_path(tag: tag.tag) do %>
+            <span><i class="fas fa-tag icon-tag"></i><%= tag.tag %></span>
+          <% end %>
+        <% end %>
+        </a>
+      </div>
+    </div>
+  </article>
+  <% @geinin.geinin_members.each do |member| %>
+    <article class="post hard-shadows">
+        <div class="post-header">
+          <span class="geinin-name-title"><%= member.name %></span>
+          <span class="geinin-yomi"><%= member.yomi %></span>
+        </div>
+        <div class="post-wrapper">
+          <div class="post-content">
+            <% if member.twitter_id.present? %>
+              <div>Twitter: @<%= link_to member.twitter_id, member.twitter_id %></p></div>
+            <% end %>
+          <% if member.instagram_id.present? %>
+              <div>Instagram: @<%= link_to member.instagram_id, member.instagram_id %></p></div>
+            <% end %>
+            <% if member.blog_url.present? %>
+              <div>Blog: <%= link_to member.blog_url, member.blog_url %></p></div>
+            <% end %>
+          </div>
+        </div>
+      </div>
+  </article>
+  <% end %>
 	<%= render :partial => "events/event_list", locals: { events: @events, user: @user  } %>
 </section>
