--- a/app/views/participates/_participate.html.erb
+++ b/app/views/participates/_participate.html.erb
@@ -1,5 +1,5 @@
 <% if user_signed_in? %>
-  <% if event.participated_by?(current_user) %>
+  <% if event.participated_by?(event,current_user) %>
     <%= link_to event_participates_path(event), method: :delete, remote: true, :protocol => 'https' do %>
         <span class="fa fa-heart accent" aria-hidden="true"></span>
         <%= event.participates.where(event_id: event.id).count %>
