--- a/app/views/pendings/_pending.html.erb
+++ b/app/views/pendings/_pending.html.erb
@@ -1,13 +1,13 @@
 <% if user_signed_in? %>
-  <% if event.pending_by?(current_user) %>
+  <% if event.pending_by?(event,current_user) %>
     <%= link_to event_pendings_path(event), method: :delete, remote: true, :protocol => 'https' do %>
-        <span class="fa fa-heart accent" aria-hidden="true"></span>
+        <span class="fa fa-question-circle accent" aria-hidden="true"></span>
         <%= event.pendings.where(event_id: event.id).count %>
         <span class="post-option-text">気になる</span>
     <% end %>
   <% else %>
     <%= link_to event_pendings_path(event), method: :post, remote: true, :protocol => 'https' do %>
-        <span class="fa fa-heart-o" aria-hidden="true"></span>
+        <span class="fa fa-question-circle" aria-hidden="true"></span>
         <%= event.pendings.where(event_id: event.id).count %>
       <span class="post-option-text">気になる</span>
     <% end %>
@@ -15,7 +15,7 @@
 <% else %>
 		<!--ログインしていない場合、「ログインするといいね機能が使えます」のメッセージを出す-->
 		<a id="modal-open" class="button-link">
-			<i class="fa fa-heart-o" aria-hidden="true"></i>
+			<i class="fa fa-question-circle" aria-hidden="true"></i>
 			<%= event.pendings.where(event_id: event.id).count %>
 			<span class="post-option-text">気になる</span>
 		</a>
