--- a/app/views/pendings/create.js.erb
+++ b/app/views/pendings/create.js.erb
@@ -1,1 +1,1 @@
-$("#pending-button-#{@event.id}").html("<%= j(render partial: 'pendings/pending', locals: { event: @event, pending: @pending }) %>")
+ $("#pending-button-<%= @event.id %>").html("<%= j(render partial: 'pendings/pending', locals: { event: @event, pending: @pending }) %>")
