--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -160,8 +160,8 @@
             <% end %>
           <% else %>
             <%= link_to events_path do %>
-              <span class="fa fa-user-o user-menu-icon"></span>
-              <span class="user-menu-button-text">Myページ</span>
+              <span class="fas fa-bell user-menu-icon"></span>
+              <span class="user-menu-button-text">通知</span>
             <% end %>
           <% end %>
         </li>
