--- a/app/views/geinins/_search_form.html.erb
+++ b/app/views/geinins/_search_form.html.erb
@@ -7,7 +7,7 @@
       </div>
       <div class="search-form-area">
         <%= form_tag(search_path, method: "get") do %>
-          <%= text_field_tag :keyword,"",class: "search-form" %>
+          <%= text_field_tag :keyword,"",:class => "search-form",:placeholder =>"キーワード(例:バナナマン、M-1グランプリ)" %>
         <% end %>
       </div>
       <div class="search-performer-box post-performer">
